ToDo Scrollbar fixed
Fixed ToDo scrollbar to be hidden on Firefox. Also made body not scrollable.

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   min-width: 1250px;
   background: #F1F1F1;
+  overflow-y: hidden;
 }
 
 div.hideScroll {
@@ -11,6 +12,16 @@ div.hideScroll {
   height: 60%;
   top: 0;
   margin: 90px 0px 0px 50px;
+  overflow: hidden;
+}
+
+div.bubble div.hideScroll {
+  position: absolute;
+  display: block;
+  width: 78%;
+  height: 140px;
+  top: 0;
+  margin: 60px 25px 10px 50px;
   overflow: hidden;
 }
 
@@ -414,7 +425,7 @@ div.day:hover button.addBtn {opacity: 1}
 div.day ul {
   position: relative;
   display: block;
-  width: calc(100% + 15px);
+  width: calc(100% + 16px);
   height: 100%;
   overflow-y: scroll;
 }
@@ -846,11 +857,9 @@ div.bubble button#bubbleAdd {
 }
 
 div.bubble ul#bubbleList {
-  position: relative;
-  display: block;
-  height: 120px;
-  margin: 20px 25px 10px 50px;
+  height: calc(100% + 16px);
   overflow: scroll;
+  width: calc(100% + 16px)
 }
 
 div.bubble ul#bubbleList li p {
